--- a/triangle/Domain/Domain.vcxproj
+++ b/triangle/Domain/Domain.vcxproj
@@ -131,6 +131,9 @@
   <ItemGroup>
     <ClInclude Include="Triangle.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Triangle.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
